# coda

./: .coda.md  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md
.chats/: 20160218.md  20260209.md  20260212.md  20260217.md  code-review.md
.coda/: config.yml
.coda/auto-update-doc/: state.yml
.coda/auto-update-doc/specs/: design.md  verification.md
.coda/optimize-init/: state.yml
.coda/optimize-init/specs/: design.md  verification.md
.coda/optimize-log/: state.yml
.coda/optimize-log/specs/: design.md  verification.md
.coda/optimize-run/: state.yml
.coda/optimize-run/specs/: design.md  verification.md
.coda/refactor/: state.yml
.coda/refactor/specs/: design.md  verification.md
.coda/release-to-createsio/: state.yml
.coda/release-to-createsio/specs/: design.md  verification.md
.coda/server-log-add/: state.yml
.coda/slack-repo/: state.yml
.coda/slack-repo/specs/: design.md  verification.md
.coda/support-slack/: state.yml
.coda/support-slack/specs/: design.md  verification.md
.coda/update-doc/: state.yml
.coda/update-doc/specs/: design.md  verification.md
.coda/update-readme/: state.yml
.coda/update-readme/specs/: design.md  verification.md
.cursor/rules/: rust.mdc
.cursor/skills/codex-code-review/: PROMPTS.md  SKILL.md
.cursor/skills/rust-code-review/: SKILL.md  STANDARDS.md
.github/workflows/: release.yml
apps/coda-cli/: Cargo.toml
apps/coda-cli/src/: app.rs  cli.rs  fmt_utils.rs  init_ui.rs  interactive_config.rs  line_editor.rs  main.rs  markdown.rs  run_ui.rs  tui_widgets.rs  ui.rs
apps/coda-server/: Cargo.toml
apps/coda-server/src/: config.rs  dispatch.rs  error.rs  formatter.rs  main.rs  session.rs  slack_client.rs  socket.rs  state.rs
apps/coda-server/src/commands/: bind.rs  config.rs  init.rs  mod.rs  plan.rs  query.rs  repos.rs  run.rs  streaming.rs
apps/coda-server/src/handlers/: commands.rs  events.rs  interactions.rs  mod.rs
crates/coda-agent-sdk/: Cargo.toml
crates/coda-agent-sdk/examples/: hooks.rs  mcp_calculator.rs  quick_start.rs  streaming_mode.rs  system_prompt.rs  tool_permission_callback.rs  tools_option.rs
crates/coda-agent-sdk/src/: client.rs  lib.rs  options.rs
crates/coda-agent-sdk/src/backend/: mod.rs
crates/coda-agent-sdk/src/backend/claude/: command_builder.rs  mod.rs
crates/coda-agent-sdk/src/backend/codex/: app_server.rs  exec_transport.rs  jsonrpc.rs  message_parser.rs  mod.rs
crates/coda-agent-sdk/src/internal/: query.rs
crates/coda-agent-sdk/src/transport/: subprocess_cli.rs
crates/coda-agent-sdk/tests/: test_e2e.rs  test_errors.rs  test_integration.rs  test_message_parser.rs  test_session_semantics.rs  test_transport.rs  test_types.rs
crates/coda-core/: API.md  Cargo.toml
crates/coda-core/src/: async_ops.rs  check_runner.rs  codex.rs  config.rs  engine.rs  error.rs  gh.rs  git.rs  lib.rs  parser.rs  planner.rs  profile.rs  project.rs  reviewer.rs  runner.rs  scanner.rs  session.rs  state.rs  task.rs
crates/coda-core/src/phases/: dev.rs  docs.rs  mod.rs  pr.rs  review.rs  verify.rs
crates/coda-pm/: API.md  Cargo.toml
crates/coda-pm/src/: builtin.rs  error.rs  lib.rs  loader.rs  manager.rs  template.rs
crates/coda-pm/templates/commit/: fix_hook_errors.j2
crates/coda-pm/templates/init/: analyze_repo.j2  setup_project.j2  system.j2
crates/coda-pm/templates/plan/: approve.j2  design_spec.j2  system.j2  verification.j2
crates/coda-pm/templates/run/: create_pr.j2  dev_phase.j2  implement.j2  resume.j2  review.j2  setup.j2  system.j2  test.j2  update_docs.j2  verify.j2
deploy/: coda-server.service  sudoers-coda-deploy
docs/: arch.md  index.md  slack-setup.md
docs/research/: openai-codex-cli-research.md
specs/: design.md
