[package]
name = "coda-pm"
description = "Prompt manager for CODA"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
